# msdfgen

./: CMakeLists.txt  msdfgen.h
core/: Bitmap.h  Shape.cpp  SignedDistance.cpp  SignedDistance.h  msdfgen.cpp
